objects/SPA_Type_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Display Order for picklist</description>
        <inlineHelpText>Display Order for picklist</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage_Value__c</fullName>
        <label>Percentage Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>SPA Type Mapping</label>
    <pluralLabel>SPA Type Mappings</pluralLabel>
</CustomObject>